--- a/css/styles.css
+++ b/css/styles.css
@@ -318,8 +318,8 @@ body {
 }
 
 .modal-area {
-  margin-right: 40px;
-  margin-left: 40px;
+  padding-right: 40px;
+  padding-left: 40px;
   text-align: left;
 }
 
@@ -336,13 +336,40 @@ body {
   color: var(--secondary-text-color);
 }
 
+.input-wrapter {
+  position: relative;
+}
+
 .modal-input {
+  cursor: pointer;
   width: 100%;
-  height: 40px;
+  height: 42px;
   border: 1px solid rgba(33, 33, 33, 0.2);
 
   border-radius: 4px;
-  padding: 12px;
+  padding: 12px 40px;
+  background: transparent;
+  outline: none;
+}
+
+.modal-input:hover,
+.modal-input:focus {
+  border-color: var(--hoover-color);
+}
+
+.input-icon {
+  position: absolute;
+  top: 30px;
+  left: 12px;
+  transform: translateY(-30px);
+
+  width: 18px;
+  height: 18px;
+}
+
+.modal-input:hover + .input-icon,
+.modal-input:focus + .input-icon {
+  fill: var(--hoover-color);
 }
 
 .modal-textarea {
@@ -352,14 +379,53 @@ body {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
+  outline: none;
 }
 
-::placeholder {
-  font-size: 12px;
-  line-height: 1.16;
-  letter-spacing: 0.01em;
+.modal-textarea:hover,
+.modal-textarea:focus {
+  border-color: var(--hoover-color);
+}
 
-  color: rgba(117, 117, 117, 0.5);
+.button-modal {
+  display: block;
+  margin: 0 auto;
+  margin-top: 30px;
+}
+
+.check-text {
+  font-size: 14px;
+  line-height: 1.71;
+
+  color: #757575;
+  display: flex;
+  align-items: center;
+}
+
+.check-icon {
+  width: 11px;
+  height: 8px;
+}
+
+.modal-checkbox:checked + .check-text span {
+  background-color: #2196f3;
+  border: none;
+}
+
+.check-text span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 2px;
+  margin-right: 8px;
+}
+
+.terms-contract {
+  color: #2196f3;
 }
 
 /* Основное */
@@ -724,6 +790,10 @@ body {
   margin-bottom: 20px;
 }
 
+.modal-form-footer {
+  display: inline-flex;
+}
+
 .modal-input-footer {
   padding: 15px 16px;
   width: 358px;
@@ -733,6 +803,7 @@ body {
   box-shadow: 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   background: transparent;
+  outline: none;
 }
 
 ::placeholder {
@@ -746,13 +817,21 @@ body {
 
 .modal-button-footer {
   margin-left: 12px;
+  display: inline-flex;
+  align-items: center;
 }
 
 .modal-button-footer::after {
   content: "";
-
+  display: inline-flex;
+  margin-left: 10px;
   width: 24px;
   height: 24px;
+
+  background: url(../images/iconsend.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
 /* Portfolio */
