--- a/css/styles.css
+++ b/css/styles.css
@@ -821,7 +821,7 @@ body {
   align-items: center;
 }
 
-.modal-button-footer::after {
+/* .modal-button-footer::after {
   content: "";
   display: inline-flex;
   margin-left: 10px;
@@ -832,6 +832,23 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  fill: #ffffff;
+}
+
+.modal-button-footer::after:hover {
+  fill: blue;
+} */
+
+.footer-icon-btn {
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+  fill: #ffffff;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button-footer:hover .footer-icon-btn {
+  fill: var(--hoover-color);
 }
 
 /* Portfolio */
